--- a/index_just.css
+++ b/index_just.css
@@ -6,7 +6,7 @@ body {
 
 @font-face {
     font-family: myCursive;
-    src: url(../fonts/myCursive.ttf);
+    src: url(fonts/myCursive.ttf);
 }
 
 .whole_body {
@@ -34,7 +34,7 @@ body {
 
 .one {
     position: relative;
-    background-image: url(../images/header_photo.jpg); 
+    background-image: url(images/header_photo.jpg); 
     background-repeat: no-repeat;
     background-size: cover;
     height: 300px;
